--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,5 +1,3 @@
----
----
 @font-face {
     font-family: 'dseg7';
     src:  url('../../DSEG7Classic-Regular.woff2') format('woff2'),
@@ -8,5 +6,6 @@
 
 
 .dseg7 {
-    font-family: dseg7
+    font-family: dseg7;
+    font-size: 22px;
 }
